<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SecondFragment"
    android:background="@color/white_so_purple">

    <TextView
        android:id="@+id/text_views_second_fragment"
        style="@style/Text_Views_Style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/second_fragment"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/image_view_logo_second_fragment"
        style="@style/Image_Views_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_views_second_fragment"
        tools:ignore="MissingConstraints"
        app:tint="@color/purple_800" />

    <EditText
        android:id="@+id/edit_text_age"
        style="@style/Edit_Text_Style"
        android:hint="@string/type_your_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_logo_second_fragment"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edit_text_gender"
        style="@style/Edit_Text_Style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_age"
        android:hint="@string/type_your_gender"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_save_second_fragment"
        style="@style/My_Button_Style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_gender"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>